--- a/index.html
+++ b/index.html
@@ -1,45 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design for Bootstrap</title>
-  <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Material Design Bootstrap -->
-  <link rel="stylesheet" href="css/mdb.min.css">
-  <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<title>Adam Larson</title>
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/mdb.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-
-  <!-- Start your project here-->  
-  <div style="height: 100vh">
-    <div class="flex-center flex-column">
-      <h1 class="text-hide animated fadeIn mb-4" style="background-image: url('https://mdbootstrap.com/img/logo/mdb-transparent-250px.png'); width: 250px; height: 90px;">MDBootstrap</h1>
-      <h5 class="animated fadeIn mb-3">Thank you for using our product. We're glad you're with us.</h5>
-      <p class="animated fadeIn text-muted">MDB Team</p>
-    </div>
-  </div>
-  <!-- End your project here-->
-
-  <!-- jQuery -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
-  <!-- Your custom scripts (optional) -->
-  <script type="text/javascript"></script>
-
+<body data-spy="scroll" data-target="#navbar" data-offset="200" class="position-relative">
+	<nav id="navbar" class="navbar navbar-expand-lg fixed-top scrolling-navbar navbar-dark">
+		<a class="navbar-brand font-weight-bolder mr-4" href="#top">Adam Larson</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle menu"><span class="navbar-toggler-icon"></span></button>
+		<div id="menu" class="collapse navbar-collapse">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+				<li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+				<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+			</ul>
+			<ul class="navbar-nav nav-flex-icons ml-auto">
+				<li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/larsoad/" target="_blank" title="Linked In"><i class="fab fa-linkedin"></i></a></li>
+				<li class="nav-item"><a class="nav-link" href="files/resume.pdf" title="Resume"><i class="fas fa-file-alt"></i></a></li>
+				<li class="nav-item"><a class="nav-link" href="https://pirhosoft.com" target="_blank" title="PiRho Soft"><img class="image-icon" src="img/icons/pirho-soft.png"></img></a></li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+					<div class="dropdown-menu dropdown-menu-right dropdown-default">
+						<a class="dropdown-item" href="https://github.com/larsoad" target="_blank"><i class="fas fa-user mx-2"></i> Personal</a>
+						<a class="dropdown-item" href="https://github.com/pirhosoft" target="_blank"><i class="fas fa-user-tie mx-2"></i> PiRho Soft</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div id="top" class="jumbotron header" style="background-image: url(img/background.jpg)">
+	</div>
+	<div id="about" class="section">
+		<div class="container p-4">
+			<div class="row">
+				<div class="col p-2 text-center">
+					<h3 class="font-weight-bold">About</h3>
+				</div>
+			</div>
+			<div class="row p-2">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deleniti explicabo voluptatem quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis adipisci, velit dolore magnam.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deleniti explicabo voluptatem quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis adipisci, velit dolore magnam.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deleniti explicabo voluptatem quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis adipisci, velit dolore magnam.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deleniti explicabo voluptatem quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis adipisci, velit dolore magnam.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deleniti explicabo voluptatem quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis adipisci, velit dolore magnam.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deleniti explicabo voluptatem quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis adipisci, velit dolore magnam.</p>
+			</div>
+		</div>
+	</div>
+	<div id="projects" class="section dark-section">
+		<div class="container p-4">
+			<div class="row">
+				<div class="col p-2 text-center">
+					<h3 class="font-weight-bold">Projects</h3>
+				</div>
+			</div>
+			<div class="row p-2">
+				<div class="col">
+					<div id="projects-carousel" class="carousel slide" data-interval="false">
+						<div class="carousel-inner" role="listbox">
+							<div class="carousel-item active">
+								<div class="col-md-12">
+									<div class="card mx-2 my-2 project-card">
+										<div class="card-body">
+											<h4 class="card-title">The Art of War</h4>
+											<p class="card-text">Here's some stuff about The Art of War.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="col-md-12">
+									<div class="card mx-2 my-2 project-card">
+										<div class="card-body">
+											<h4 class="card-title">Unity Tool Suite</h4>
+											<p class="card-text">Here's some stuff about The Unity Tool Suite.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="col-md-12">
+									<div class="card mx-2 my-2 project-card">
+										<div class="card-body">
+											<h4 class="card-title">FitPro</h4>
+											<p class="card-text">Here's some stuff about FitPro.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="col-md-12">
+									<div class="card mx-2 my-2 project-card">
+										<div class="card-body">
+											<h4 class="card-title">Torque</h4>
+											<p class="card-text">Here's some stuff about Torque.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="col-md-12">
+									<div class="card mx-2 my-2 project-card">
+										<div class="card-body">
+											<h4 class="card-title">Other</h4>
+											<p class="card-text">Here's some other stuff.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<ol class="carousel-indicators">
+							<li class="project-thumbnail active" data-target="#projects-carousel" data-slide-to="0"><img class="rounded-circle" src="img/thumbnails/the-art-of-war.png"></li>
+							<li class="project-thumbnail" data-target="#projects-carousel" data-slide-to="1"><img class="rounded-circle" src="img/thumbnails/unity-tool-suite.png"></li>
+							<li class="project-thumbnail" data-target="#projects-carousel" data-slide-to="2"><img class="rounded-circle" src="img/thumbnails/fitpro.png"></li>
+							<li class="project-thumbnail" data-target="#projects-carousel" data-slide-to="3"><img class="rounded-circle" src="img/thumbnails/torque.png"></li>
+							<li class="project-thumbnail" data-target="#projects-carousel" data-slide-to="4"><img class="rounded-circle" src="img/thumbnails/pirho-soft.png"></li>
+						</ol>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="contact" class="section">
+		<div class="container p-4">
+			<div class="row">
+				<div class="col p-2 text-center">
+					<h3 class="font-weight-bold">Contact Me</h3>
+				</div>
+			</div>
+			<div class="row p-2">
+				<div class="col-md-9 mb-md-0 mb-5">
+					<form id="contact-form">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="md-form mb-0">
+									<input type="text" id="name" name="name" class="form-control">
+									<label for="name" class="">Your name</label>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="md-form mb-0">
+									<input type="email" id="email" name="email" class="form-control" required>
+									<label for="email" class="">Your email</label>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="md-form">
+									<textarea type="text" id="message" name="message" rows="5" class="form-control md-textarea" required></textarea>
+									<label for="message">Your message</label>
+								</div>
+							</div>
+						</div>
+						<div class="d-flex">
+							<div id="result-success" class="result align-self-center text-success">Thanks for contacting me! I will respond ASAP.</div>
+							<div id="result-failure" class="result align-self-center text-danger">Unfortunately the message couldn't be sent. Please contact me using the email to the right</div>
+							<div class="flex-1"></div>
+							<button class="btn btn-primary send-button" type="submit">Send</button>
+						</div>
+					</form>
+				</div>
+				<div class="col-md-3 text-center align-self-center">
+					<ul class="list-unstyled mb-0">
+						<li>
+							<i class="fas fa-map-marker-alt fa-2x"></i>
+							<p>Seattle, WA, USA</p>
+						</li>
+						<li>
+							<i class="fas fa-envelope mt-4 fa-2x"></i>
+							<p>larsoad@gmail.com</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer class="page-footer">
+		<div class="footer-copyright text-center py-3">Copyright © Adam Larson 2020</div>
+	</footer>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script type="text/javascript" src="js/contact.js"></script>
 </body>
 </html>
