--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</ul>
 			<ul class="navbar-nav nav-flex-icons ml-auto">
 				<li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/larsoad/" target="_blank" title="Linked In"><i class="fab fa-linkedin"></i></a></li>
-				<li class="nav-item"><a class="nav-link" href="files/adam_larson_resume.pdf" title="Resume"><i class="fas fa-file-alt"></i></a></li>
+				<li class="nav-item"><a class="nav-link" href="files/adam_larson_resume.pdf" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a></li>
 				<li class="nav-item"><a class="nav-link" href="https://pirhosoft.com" target="_blank" title="PiRho Soft"><img class="image-icon" src="img/icons/pirho-soft.png"></img></a></li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
