--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta property="og:title" content="Adam Larson - Portfolio">
+	<meta property="og:image" content="https://adamdlarson.com/img/background.jpg">
+	<meta property="og:description" content="Adam Larson's Software Development Portfolio">
 	<title>Adam Larson</title>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
