--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
 				<li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-				<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 			</ul>
 			<ul class="navbar-nav nav-flex-icons ml-auto">
 				<li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/larsoad/" target="_blank" title="Linked In"><i class="fab fa-linkedin"></i></a></li>
 				<li class="nav-item"><a class="nav-link" href="files/adam_larson_resume.pdf" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a></li>
-				<li class="nav-item"><a class="nav-link" href="https://pirhosoft.com" target="_blank" title="PiRho Soft"><img class="image-icon" src="img/icons/pirho-soft.png"></img></a></li>
+				<li class="nav-item"><a class="nav-link" href="https://pirhosoft.github.io" target="_blank" title="PiRho Soft"><img class="image-icon" src="img/icons/pirho-soft.png"></img></a></li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-default">
@@ -356,65 +355,8 @@
 			</div>
 		</div>
 	</div>
-	<div id="contact" class="section">
-		<div class="container p-4">
-			<div class="row">
-				<div class="col p-2 text-center">
-					<h3 class="font-weight-bold">Contact Me</h3>
-				</div>
-			</div>
-			<div class="row p-2">
-				<div class="col-md-9 mb-md-0 mb-5">
-					<form id="contact-form">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="md-form mb-0">
-									<input type="text" id="name" name="name" class="form-control">
-									<label for="name" class="">Your name</label>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="md-form mb-0">
-									<input type="email" id="email" name="email" class="form-control" required>
-									<label for="email" class="">Your email</label>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<div class="md-form">
-									<textarea type="text" id="message" name="message" rows="5" class="form-control md-textarea" required></textarea>
-									<label for="message">Your message</label>
-								</div>
-							</div>
-						</div>
-						<div class="d-flex">
-							<div id="result-success" class="result align-self-center text-success">Thanks for contacting me! I will respond ASAP.</div>
-							<div id="result-failure" class="result align-self-center text-danger">Unfortunately the message couldn't be sent. Please contact me using the email to the right</div>
-							<div class="flex-1"></div>
-							<button class="btn btn-primary send-button" type="submit">Send</button>
-						</div>
-					</form>
-				</div>
-				<div class="col-md-3 text-center align-self-center">
-					<ul class="list-unstyled mb-0">
-						<li>
-							<i class="fas fa-map-marker-alt fa-2x"></i>
-							<p>Seattle, WA, USA</p>
-						</li>
-						<li>
-							<a class="email-link" href="mailto:larsoad@gmail.com" target="_blank">
-								<i class="fas fa-envelope mt-4 fa-2x"></i>
-								<p>larsoad@gmail.com</p>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
 	<footer class="page-footer">
-		<div class="footer-copyright text-center py-3">Copyright © Adam Larson 2020</div>
+		<div class="footer-copyright text-center py-3">Copyright © Adam Larson 2021</div>
 	</footer>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
